Updated html file with quarto render

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <a href="mailto:nbrewer@asu.edu" target="_blank"><i class="fa-xl fa-solid fa-envelope"></i></a>
         </div>
         <div class="links">
-                        <a href="https://nicole-brewer.com" target="_blank"><i class="fa fa-house">&nbsp;</i> Personal Website</a>
+                        <a href="https://jupyter4.science" target="_blank"><i class="fa fa-house">&nbsp;</i> Jupyter4Science</a>
+                        <a href="https://github.com/nicole-brewer/cv/blob/master/cv.pdf" target="_blank"><i class="fa fa-file">&nbsp;</i> Curriculum Vitae</a>
                         <a href="https://bssw.io/fellows/nicole-brewer" target="_blank"><i class="fa fa-laptop-code">&nbsp;</i> Better Scientific Software Fellowship</a>
                         <a href="https://www.buymeacoffee.com/catch_me_coding" target="_blank"><i class="fa-solid fa-mug-hot">&nbsp;</i> Buy Me a Coffee</a>
                     </div>
